--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,15 @@ services:
      - gitlab_config:/etc/gitlab
      - gitlab_logs:/var/log/gitlab
      - gitlab_data:/var/opt/gitlab
+  nexus:
+    image: sonatype/nexus3
+    ports:
+     - "8081:8081"
+    volumes:
+     - nexus_data:/nexus-data
 volumes:
  jenkins_home:
  gitlab_config:
  gitlab_logs:
  gitlab_data:
+ nexus_data:
